# kris_kringle

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  run_kk.sh
src/: conf.rs  email.rs  file_utils.rs  kk_log.rs  lib.rs  main.rs
templates/: allocate.html.tera  base.html.tera  index.html.tera  participants.html.tera
tests/: test_all.rs
tests/resources/: full.toml  groups.txt  people.txt
