[package]
name = "kris_kringle"
version = "0.1.0"
authors = ["maccod <maccora17@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.22"
rand = "0.3.*"
lettre = "0.9.2"
toml = "0.5"
serde = "1"
serde_derive = "1"
log = "0.3"

lazy_static = "1.4"
actix-web = "2.0"
actix-rt = "1.0"

[dependencies.tera]
version = "1"
default-features = false